2. 修改Mysql的安装与运行

--- a/Mysql/1.1安装.md
+++ b/Mysql/1.1安装.md
@@ -43,3 +43,22 @@ mysql -u username -p password
 ```
 exit & quit
 ```
+
+## 卸载
+
+```
+MacOs:  brew uninstall mysql
+
+Ubuntu: 删除数据文件
+		rm -rf /var/lib/mysql/ 	
+		  
+		删除配置文件
+        rm -rf /etc/mysql/     
+         
+        自动卸载(mysql-server | mysql-client)
+		apt-get autoremove mysql* --purge
+        apt-get remove apparmor
+         
+        检查是否卸载干净 
+        dpkg -l | grep mysql
+```
