--- a/SQL/1.9UPDATE.md
+++ b/SQL/1.9UPDATE.md
@@ -29,8 +29,10 @@ ID | Last_Name | First_Name | Address        | City
 
 ### 更新某一行中的某一列
 
+我们为Last_Name为"Wilson"的人添加First_Name
+
 ```
-UPDATE Persons SET Last_Name = 'Fred' WHERE Last_Name = 'Wilson';
+UPDATE Persons SET First_Name = 'Fred' WHERE Last_Name = 'Wilson';
 ```
 
 ### 结果：
@@ -42,7 +44,7 @@ ID | Last_Name | First_Name | Address        | City
 3  | Carter    | Thomas     | Changan Street | Beijing
 4  | Bush      | John       | Changan Street | Beijing
 5  | Gates     | Bill       | Xuanwumen 10   | Beijing
-6  | Fred      | NULL       | Champs-Elysees | NULL
+6  | Wilson    | Fred       | Champs-Elysees | NULL
 
 --
 
@@ -51,7 +53,7 @@ ID | Last_Name | First_Name | Address        | City
 我们会修改地址（Address），并添加城市名称（City）：
 
 ```
-UPDATE Persons SET Address = 'Zhongshan 23', City = 'Nanjing' WHERE Last_Name = 'Fred';
+UPDATE Persons SET Address = 'Zhongshan 23', City = 'Nanjing' WHERE Last_Name = 'Wilson';
 ```
 
 ### 结果：
@@ -63,6 +65,6 @@ ID | Last_Name | First_Name | Address        | City
 3  | Carter    | Thomas     | Changan Street | Beijing
 4  | Bush      | John       | Changan Street | Beijing
 5  | Gates     | Bill       | Xuanwumen 10   | Beijing
-6  | Wilson    | NULL       | Zhongshan 23   | Nanjing
+6  | Wilson    | Fred       | Zhongshan 23   | Nanjing
 
 --
