--- a/SQL/1.17JOIN.md
+++ b/SQL/1.17JOIN.md
@@ -26,13 +26,13 @@ ID | Last_Name | First_Name | Address        | City
 
 接下来请看"Orders"表：
 
-ID_O | Order_No | ID_P |
------|----------|------|
-1    |    77895 |    3 |
-2    |    44678 |    3 |
-3    |    22456 |    1 |
-4    |    24562 |    1 |
-5    |    34764 |   65 |
+ID_O | Order_No | ID_P 
+-----|----------|-----
+1    |    77895 |    3 
+2    |    44678 |    3 
+3    |    22456 |    1 
+4    |    24562 |    1 
+5    |    34764 |   65 
 
 请注意"ID_O"是Orders表中的主键，同时，"Orders"表中的"ID_P"用于引用"Persons"表中的人，而无需使用他们的确切姓名。
 
@@ -53,12 +53,12 @@ SELECT Persons.Last_Name, Persons.First_Name, Orders.Order_No FROM Persons, Orde
 ### 结果集：
 
 
-Last_Name | First_Name | Order_No |
-----------|------------|----------|
-Carter    | Thomas     |    77895 |
-Carter    | Thomas     |    44678 |
-Adams     | John       |    22456 |
-Adams     | John       |    24562 |
+Last_Name | First_Name | Order_No 
+----------|------------|---------
+Carter    | Thomas     |    77895 
+Carter    | Thomas     |    44678 
+Adams     | John       |    22456 
+Adams     | John       |    24562 
 
 --
 
@@ -74,12 +74,12 @@ SELECT Persons.Last_Name, Persons.First_Name, Orders.Order_No FROM Persons INNER
 
 ### 结果集：
 
-Last_Name | First_Name | Order_No |
-----------|------------|----------|
-Adams     | John       |    24562 |
-Adams     | John       |    22456 |
-Carter    | Thomas     |    77895 |
-Carter    | Thomas     |    44678 |
+Last_Name | First_Name | Order_No 
+----------|------------|---------
+Adams     | John       |    24562 
+Adams     | John       |    22456 
+Carter    | Thomas     |    77895 
+Carter    | Thomas     |    44678 
 
 --
 
