--- a/SQL/1.18INNER_JOIN.md
+++ b/SQL/1.18INNER_JOIN.md
@@ -30,13 +30,13 @@ ID | Last_Name | First_Name | Address        | City
 
 "Orders"表：
 
-ID_O | Order_No | ID_P |
------|----------|------|
-1    |    77895 |    3 |
-2    |    44678 |    3 |
-3    |    22456 |    1 |
-4    |    24562 |    1 |
-5    |    34764 |   65 |
+ID_O | Order_No | ID_P 
+-----|----------|-----
+1    |    77895 |    3 
+2    |    44678 |    3 
+3    |    22456 |    1 
+4    |    24562 |    1 
+5    |    34764 |   65 
 
 --
 
@@ -52,11 +52,11 @@ SELECT Persons.Last_Name, Persons.First_Name, Orders.Order_No FROM Persons INNER
 
 ### 结果集：
 
-Last_Name | First_Name | Order_No |
-----------|------------|----------|
-Adams     | John       |    24562 |
-Adams     | John       |    22456 |
-Carter    | Thomas     |    77895 |
-Carter    | Thomas     |    44678 |
+Last_Name | First_Name | Order_No 
+----------|------------|---------
+Adams     | John       |    24562 
+Adams     | John       |    22456 
+Carter    | Thomas     |    77895 
+Carter    | Thomas     |    44678 
 
 --
