fix: fix the order by syntax error

--- a/SQL/1.20RIGHT_JOIN.md
+++ b/SQL/1.20RIGHT_JOIN.md
@@ -47,7 +47,7 @@ ID_O | Order_No | ID_P
 您可以使用下面的 SELECT 语句：
 
 ```
-SELECT Persons.Last_Name, Persons.First_Name, Orders.Order_No FROM Persons RIGHT JOIN Orders ON Persons.ID_P = Orders.UD_P ORDER BY Persons;
+SELECT Persons.Last_Name, Persons.First_Name, Orders.Order_No FROM Persons RIGHT JOIN Orders ON Persons.ID_P = Orders.UD_P ORDER BY Persons.Last_Name;
 ```
 
 ### 结果集：
