--- a/SQL/1.7ORDER_BY.md
+++ b/SQL/1.7ORDER_BY.md
@@ -53,7 +53,7 @@ W3School  | 2356
 以字母顺序显示公司名称（Company），并以数字顺序显示顺序号（OrderNumber）：
 
 ```
-SELECT Company, OrderNumber FROM Orders ORDER BY Company, ORDER BY OrderNumber;
+SELECT Company, OrderNumber FROM Orders ORDER BY Company, OrderNumber;
 ```
 
 结果：
