--- a/SQL/1.46FIRST.md
+++ b/SQL/1.46FIRST.md
@@ -39,9 +39,9 @@ SELECT FIRST(OrderPrice) FROM Orders;
 
 结果集类似这样：
 
-| OrderPrice |
-|------------|
-| 1000       |
+| FIRST(OrderPrice) |
+|-------------------|
+| 1000              |
 
 注释：MySQL中没有 FIRST() 函数。
 
