--- a/SQL/1.53MID.md
+++ b/SQL/1.53MID.md
@@ -28,6 +28,7 @@ SELECT MID(字段, 起始, 长度) FROM 表名;
 |------|-----------|------------|--------------|----------|
 |    1 | Adams     | John       | NULL         | London   |
 |    2 | Bush      | George     | Fifth Avenue | New York |
+|    3 | Carter    | Thomas     | NULL         | Beijing  |
 
 现在，我们希望从 "CYTY" 字段中提取前 3 个字符。
 
