--- a/SQL/1.11TOP.md
+++ b/SQL/1.11TOP.md
@@ -26,10 +26,22 @@ SELECT TOP 记录个数|记录百分比 字段 FROM 表名;
 SELECT 字段 FROM 表名 LIMIT 记录个数;
 ```
 
+或者：
+
+```
+SELECT 字段 FROM 表名 LIMIT 起始位置, 个数;
+```
+
+注释：这种就是常见的分页查询，LIMIT 关键字必须放在 SQL 语句的最后！！！
+
 ### 例子
 
 ```
 SELECT * FROM Persons LIMIT 2;
+```
+
+```
+SELECT * FROM Persons LIMIT 0, 5;
 ```
 
 ### Oracle 语法
