update some sql file

--- a/SQL/1.23SELECT_INTO.md
+++ b/SQL/1.23SELECT_INTO.md
@@ -44,6 +44,20 @@ CREATE TABLE 备份表 (SELECT * FROM 表);
 CREATE TABLE 备份表 (SELECT 字段 FROM 表);
 ```
 
+或者：
+
+```
+CREATE TABLE 备份表 (字段 数据类型 约束, 字段 数据类型, 约束) (SELECT 字段 AS 字段别名 FROM 表);
+```
+
+注意：这种方式可以
+
+或者把数据插入已有的表：
+
+```
+INSERT INTO 备份表 字段 SELECT 字段 FROM 表;
+```
+
 --
 
 ### SQL SELECT INTO 实例 - 制作备份复件：
