--- a/SQL/1.30FOREIGN_KEY.md
+++ b/SQL/1.30FOREIGN_KEY.md
@@ -4,7 +4,7 @@
 
 ### SQL FOREIGN KEY 约束
 
-一个表中的 FOREIGN KEY 指向另一个表中的 PRIMARY KEY。
+一个表中的 FOREIGN KEY 指向另一个表中的 PRIMARY KEY。并且 "主键" 与 "外键" 字段的数据类型&长度必须一致。
 
 让我们通过一个例子来结识外键。请看下面两个表：
 
@@ -79,13 +79,13 @@ CONSTRAINT FK_PerOrder FOREIGN KEY (ID_P) REFERENCES Persons (ID_P));
 
 如果在"Orders"表已存在的情况下为"ID_P"列创建 FOREIGN KEY 约束，请使用下面的 SQL ：
 
+### MySQL / Oracle / SQL Server / MS Access：
+
 ```
 ALTER TABLE Orders ADD FOREIGN KEY (ID_P) REFERENCES Persons (ID_P);
 ```
 
 如果需要命名 FOREIGN KEY 约束，以及为多个字段定义 FOREIGN KEY 约束，请使用下面的 SQL 语法：
-
-### MySQL / Oracle / SQL Server / MS Access：
 
 ```
 ALTER TABLE Orders ADD CONSTRAINT FK_PerOrder FOREIGN KEY (ID_P) REFERENCES Persons (ID_P);
@@ -98,6 +98,14 @@ ALTER TABLE Orders ADD CONSTRAINT FK_PerOrder FOREIGN KEY (ID_P) REFERENCES Pers
 如需撤销 FOREIGN KEY 约束，请使用下面的 SQL ：
 
 ### MySQL：
+
+使用下列 SQL 先获取到 "FOREIGN KEY" 约束的名字： 
+
+```
+SHOW CREATE TABLE 表;
+```
+
+利用 "FOREIGN KEY" 约束的名字来删除约束：
 
 ```
 ALTER TABLE Orders DROP FOREIGN KEY FK_PerOrder;
