--- a/Sql/1.2sql语法.md
+++ b/Sql/1.2sql语法.md
@@ -4,7 +4,7 @@
 
 ### 数据库表
 
-一个数据库通常保护一个或多个表。每个表由一个名字标示（例如“用户”或者“订单”）。表包含带有数据的记录（行）。下面的例子是一个名为“Persons”的表：
+一个数据库通常包含一个或多个表。每个表由一个名字标示（例如“用户”或者“订单”）。表包含带有数据的记录（行）。下面的例子是一个名为“Persons”的表：
 
 ID | Last_Name | First_Name | Address        | City 
 ---|-----------|------------|----------------|--------- 
