--- a/SQL/1.50HAVING.md
+++ b/SQL/1.50HAVING.md
@@ -4,7 +4,7 @@
 
 ### HAVING 子句
 
-在 SQL 中增加 HAVING 子句原因是，WHERE 关键字无法与 GROUP & 合计函数一起使用。
+在 SQL 中增加 HAVING 子句原因是，WHERE 关键字无法为合计函数的结果提供条件。
 
 ### SQL HAVING 语法
 
