62. 修改增删改查.md

--- a/Python中的MySQL/1.4增删改查.md
+++ b/Python中的MySQL/1.4增删改查.md
@@ -12,7 +12,7 @@ import pymysql
 try:
     conn = pymysql.connect(host = 'localhost', port = 3306, db = 'Persons', user = 'root', password = 'password', charset = 'utf8')
     cursor = conn.cursor()
-    cursor.execute('SELECT * FROM Persons')
+    cursor.execute('SELECT * FROM Persons;')
     result = cursor.fetchall()
     print(result)
     cursor.close()
@@ -40,7 +40,7 @@ import pymysql
 try:
     conn = pymysql.connect(host = 'localhost', port = 3306, db = 'Persons', user = 'root', password = 'password', charset = 'utf8')
     cursor = conn.cursor()
-    cursor.execute('UPDATE Persons SET CITY  = 'Shanghai' WHERE ID_P = 1')
+    cursor.execute('UPDATE Persons SET CITY  = 'Shanghai' WHERE ID_P = 1;')
     conn.commit()
     cursor.close()
     conn.close()
@@ -60,7 +60,7 @@ import pymysql
 try:
     conn = pymysql.connect(host = 'localhost', port = 3306, db = 'Persons', user = 'root', password = 'password', charset = 'utf8')
     cursor = conn.cursor()
-    cursor.execute("INSERT INTO Persons VALUES (DEFAULT, 'Bush', 'John', 'Changan Street', 'Beijing')")
+    cursor.execute("INSERT INTO Persons VALUES (DEFAULT, 'Bush', 'John', 'Changan Street', 'Beijing');")
     conn.commit()
     cursor.close()
     conn.close()
@@ -80,7 +80,7 @@ import pymysql
 try:
     conn = pymysql.connect(host = 'localhost', port = 3306, db = 'Persons', user = 'root', password = 'password', charset = 'utf8')
     cursor = conn.cursor()
-    cursor.execute("DELETE FROM Persons WHERE ID_P = 4")
+    cursor.execute("DELETE FROM Persons WHERE ID_P = 4;")
     conn.commit()
     cursor.close()
     conn.close()
