63. update create_index.md

--- a/SQL/1.33CREATE_INDEX.md
+++ b/SQL/1.33CREATE_INDEX.md
@@ -32,6 +32,14 @@ CREATE INDEX 索引名 ON TABLE 表名 (字段);
 CREATE UNIQUE INDEX 索引名 ON 表名 (字段);
 ```
 
+### SHOW INDEX 语法：
+
+查看表上的 '索引'。
+
+```
+SHOW INDEX FROM 表;
+```
+
 --
 
 ### CREATE INDEX 实例
