--- a/SQL/1.33CREATE_INDEX.md
+++ b/SQL/1.33CREATE_INDEX.md
@@ -14,6 +14,8 @@
 
 用户无法看到索引，它们只能被用来加速搜索/查询。
 
+注释：一个表的 PRIMARY KEY 与 FOREIGN KEY 字段会自动的添加索引。因此通过 主/外键 的查询速度会更快。
+
 注释：更新一个包含索引的表需要比更新一个没有索引的表更多的时间，这是由于索引本身也需要更新。因此，理想的做法是仅仅在常常被搜索的列（以及表）上面创建索引。
 
 ### SQL CREATE INDEX 语法：
