--- a/Python中的MySQL/1.6MySQL账户管理.md
+++ b/Python中的MySQL/1.6MySQL账户管理.md
@@ -17,8 +17,7 @@
 
 * 通常使用数据库级别操作权限。
 
---
-
+---
 ## 账户操作
 
 需要使用服务实例级别账户登录后操作，以 root 为例
@@ -253,3 +252,10 @@ FLUSH PRIVILEGES;
 ```
 mysql -h 数据库地址 -u 账户 -p
 ```
+
+注释：远程登录数据库要慎用，对于黑客而言，root 账户名是已知的，有被暴力破解的风险。
+
+通常采用的做法:
+
+* 1.ssh 远程连接服务器
+* 2.本地访问数据库
