--- a/Python中的MySQL/1.4增删改查.md
+++ b/Python中的MySQL/1.4增删改查.md
@@ -38,7 +38,7 @@ import pymysql
 try:
     conn = pymysql.connect(host = 'localhost', port = 3306, db = 'Persons', user = 'root', password = 'password', charset = 'utf8')
     cursor = conn.cursor()
-    cursor.execute('UPDATE Persons SET CITY  = 'Shanghai' WHERE ID_P = 1;')
+    cursor.execute("UPDATE Persons SET CITY  = 'Shanghai' WHERE ID_P = 1;")
     conn.commit()
     cursor.close()
     conn.close()
